# HA_RFPlayer

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  README.md  hacs.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  feature_request.md  feature_request.yml
.github/workflows/: lint.yml  release.yml  test-latest.yml  test.yml  update-bot.yml  validate.yml
config/: configuration.yaml
custom_component/rfplayer/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  services.yaml  strings.json
custom_component/rfplayer/rflib/: rfpparser.py  rfpprotocol.py
custom_component/rfplayer/translations/: en.json
custom_components/: __init__.py
custom_components/rfplayer/: __init__.py  binary_sensor.py  bus_publisher.py  climate.py  config_flow.py  const.py  cover (copie).py  cover-V2.py  cover.py  device-profiles.yaml  device_profiles.py  device_publishers.py  entity.py  gateway.py  helpers.py  icons.json  light.py  manifest.json  migration.py  number.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/rfplayer/rflib/: __init__.py  exception.py  infotypes.py  protocols.py  rfpparser.py  rfpprotocol.py
custom_components/rfplayer/rfplayerlib/: __init__.py  device.py  protocol.py
custom_components/rfplayer/translations/: en.json  fr.json
scripts/: prepare-release.sh  semantic-release.sh  setup  sync_manifest_deps.py  update_manifest.py
tests/: __init__.py
tests/rfplayer/: __init__.py  conftest.py  constants.py  test_binary_sensor.py  test_bus_publisher.py  test_climate.py  test_config_flow.py  test_cover.py  test_device_publishers.py  test_entity.py  test_init.py  test_light.py  test_migration.py  test_sensor.py  test_switch.py
tests/rfplayer/device_profiles/: __init__.py  conftest.py  test_profile_registry.py
tests/rfplayer/device_profiles/frames/: Blyss_On_Off_Status.json  Chacon_Lighting.json  Chacon_On_Off_Status.json  Chacon_Switch.json  Edision_Temperature_Sensor.json  Jamming.json  OWL_Power_Sensor.json  Oregon_Pressure_Sensor.json  Oregon_Rain_Sensor.json  Oregon_Temperature_Humidity_Sensor.json  Oregon_Temperature_Sensor.json  Oregon_Wind_Sensor.json  RTS_Portal.json  RTS_Shutter.json  Visionic_Sensor_Detector.json  X2D_Detector.json  X2D_Shutter.json  X2D_Thermostat_Elec.json
tests/rfplayer/rfplayerlib/: __init__.py  test_client.py  test_device.py  test_protocol.py
